# sitting-desktop-garden

./: .buildinfo  .gitignore  CRITICAL_WARNING.txt  FREADME.md  Makefile  README.md  deploy.sh  deploypaths.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_uvonly.in  run.sh  search.html  searchindex.js
.github/workflows/: build-docs.yml  run-checks.yml
.github/workflows/setup-python/: action.yml
bootstrap/: apt_packages.txt  bootstrap.sh  face_rec_install.sh  increase_swap.sh  install_libcamera.sh  python_install.sh
client/: overlord_overlord.py  pyproject.toml
client/data/: README.md  __init__.py  database.py  routines.py
client/data/resources/: database.dbml
client/drivers/: __init__.py  ai_bros.py  camera_overlord.py  data_structures.py  login_system.py  main.py  pi_overlord.py
client/models/: __init__.py  pyproject.toml
client/models/face_rec/: routines.py
client/models/face_recognition/: __init__.py  recognition.py
client/models/pose-detection/: classification.py
client/models/pose_detection/: __init__.py  camera.py  classification.py  frame_capturer.py  landmarking.py  routines.py  trackers.py
client/proof_of_concept/: buttons.py  camera.py  cushion.py  display.py  flood_database_with_data.py  gpio.py  main.py  servo_driver.py
client/proof_of_concept/camera_dump/: so-git-commits-this-folder.txt
client/proof_of_concept/parallel_children/: gaming.txt
client/proof_of_concept/resources/: hilarious.pbm
demos/: fast_data_reset.py
docs/source/: api.rst  conf.py  index.rst
notebooks/: explore-deepface.ipynb  test-database-tools.ipynb  test-posture-tracker.ipynb
notebooks/scripts/: test-database-tools.py
scripts/: async_posture.py  bootstrap.sh  deploy.sh  explore-deepface.py  face_rec_install.sh  face_unlock.py  increase_swap.sh  python_install.sh  register_faces.py  run_garden.sh  test-posture-tracker.py  test_face_match_pi.py
server/: README.md
