[tool.poetry]
name = "sitting-desktop-garden"
version = "0.1.0"
description = ""
authors = ["Limao Chang <80520563+LimaoC@users.noreply.github.com>", "Mitchell Clark", "Gabriel Field", "Iain Jensen", "David Ramsay", "Ben Varley"]
readme = "README.md"
packages = [
    { include = "models", from = "client" },
    { include = "drivers", from = "client" }
]

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.14"
pydbml = "1.1.1"
piicodev = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ipykernel = "6.29.5"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.4.16"
sphinxcontrib-apidoc = "^0.5.0"
piccolo-theme = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
